Fixed buttons on mobile view

--- a/styles/base.css
+++ b/styles/base.css
@@ -716,7 +716,10 @@ body {
   }
 
   .hero-buttons {
-    gap: 10px;
+    display: flex;
+    flex-direction: column;  
+    align-items: flex-start;
+    gap: 20px;
   }
 
   .btn.primary,
